src/test/ui/compile-fail-migration/malformed-plugin-2.stderr
error[E0498]: malformed plugin attribute
  --> $DIR/malformed-plugin-2.rs:12:1
   |
LL | #![plugin="bleh"] //~ ERROR malformed plugin attribute
   | ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0498`.
